clusters/talos-cluster/apps/traefik-nwp-mtls/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: cf-tunnel-nwp-mtls
spec:
  controller: traefik.io/ingress-controller
