clusters/talos-cluster/apps/traefik-nwp-mtls/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik-nwp-mtls-default-deny
  namespace: traefik-nwp-mtls
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
